correction contrastes, texte images text alt syntaxe

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: black;
 }
 
 .d-bloc .a-btn:hover,
@@ -670,7 +670,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 
 .container {
@@ -766,11 +766,17 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 100%;
 }
 
 .portfolio-row {
     margin-bottom: 44px;
     margin-top: 50px;
+}
+
+.portfolio__heading {
+    width: 40%;
+    margin: auto;
 }
 
 .avatar {
@@ -800,7 +806,8 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #fff;
+    position: relative;
 }
 
 .btn-atomic-tangerine {
